--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,11 @@
-platform-modules-e582-48x6q (1.0) unstable; urgency=low
+sonic-centec-platform-modules (1.1) unstable; urgency=low
+
+  * Add support for centec e582-48x2q4z
+
+ -- xuwj <xuwj@centecnetworks.com>  Thus, 25 Jan 2018 13:43:40 +0800
+
+sonic-centec-platform-modules (1.0) unstable; urgency=low
 
   * Initial release
 
- -- xuwj <xuwj@centecnetworks.com>  Mon, 11 Nov 2017 11:11:11 -0800
+ -- xuwj <xuwj@centecnetworks.com>  Mon, 22 Jan 2018 13:43:40 +0800
